--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 x-defaults:
   network: &network
     networks:
@@ -27,11 +25,14 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db_pwd
       - MYSQL_USER=dbuser
-      - MYSQL_PASSWORD=dbpass
+      - MYSQL_PASSWORD=
     volumes:
       - data:/var/lib/mysql
     secrets:
       - db_pwd
+    configs:
+      - source: mysqld_config
+        target: /etc/mysql/conf.d/mysqld.cnf
     <<: *network
 
 
@@ -40,16 +41,22 @@ networks:
 
 secrets:
   db_pwd:
-    file: ./mysql/root_password.txt
+    file: ./secrets/mysql/root_password.txt
 
 configs:
   apache-vhosts:
     file: ./apache/vhosts.conf
   php-ini:
     file: ./php/local.ini
+  mysqld_config:
+    file: ./mysql/mysqld.cnf
 
-volumes: 
+volumes:
+
   workspace:
-     external: true 
+
+    external: true
+
   data:
-     external: true
+
+    external: true
